fix(styles.css): fix nav-right vertical align

--- a/css/styles.css
+++ b/css/styles.css
@@ -200,10 +200,6 @@ input[type=submit]:hover {
 	background-color: hsl(212, 54%, 37%);
 }
 
-.nav-right li:last-child {
-	vertical-align: baseline;
-}
-
 .navbar-wrapper {
 	display: none;
 	padding: 5.5%;
